harness: NULL scalars and NULL array cells survive assert flattening (+2 union)
SQL NULL at a scalar assert root = pure empty; Arrays.asList replaces
List.of for array cells (NULL elements are legal SQL). Converts both
sqlQueryMergingForInnerJoins tests: tests/mapping/union 87->89 (81 at
stretch start). Core suite green.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QdsCkXRDVt192HaL1tYvwi